# super-mario-bros

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: Mario.xcf  map.json  players.tsj  tileset.tsj  world_1_1.tmj
src/: main.rs  player.rs
src/libs/: animations.rs  bricks.rs  camera.rs  collider.rs  controller.rs  core.rs  enemies.rs  game.rs  object.rs  physics.rs  player.rs  prelude.rs  progress_bar.rs  scene.rs  sprite_sheet.rs  sprite_sheet_manager.rs  sprites_manager.rs  spritesheet.rs  stages.rs  textures.rs  tilemap.rs  transform.rs
src/libs/core/: animations.rs  camera.rs  collider.rs  mod.rs  object.rs  physics.rs  scene.rs  sprite_sheet.rs  sprite_sheet_manager.rs  stages.rs  textures.rs
src/libs/entities/: bricks.rs  enemies.rs  mod.rs  player.rs
src/libs/ui/: progress_bar.rs
src/libs/utils/: transform.rs
