[package]
name = "super-mario-bros"
version = "0.1.0"
authors = ["Sugi <developer.sugiono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.110.0"
piston2d-sprite = "0.60.0"
piston2d-graphics = "0.36.0"
find_folder = "0.3.0"
cgmath = "0.17.0"
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
serde_json = "1.0.57"