[package]
name = "super-mario-bros"
version = "0.1.0"
authors = ["Sugi <developer.sugiono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.123.0"
piston2d-sprite = "0.66.1"
piston2d-graphics = "0.42.0"
find_folder = "0.3.0"
cgmath = "0.18.0"
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
serde_json = "1.0.64"
fps_counter = "2.0.0"