[package]
name = "super-mario-bros"
version = "0.2.0"
authors = ["Sugi <developer.sugiono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.128.0"
piston2d-sprite = "0.67.0"
piston2d-graphics = "0.43.0"
find_folder = "0.3.0"
cgmath = "0.18.0"
serde_json = "1.0.64"
piston-music = "0.26.0"